# runway_demo

./: README.md
frontend/reviews_feeder/: TESTPLAN.md  package-lock.json  package.json
frontend/reviews_feeder/src/: App.css  App.js  config.js
frontend/reviews_feeder/src/components/: Feed.js  Sidebar.js
python_backend/: app.py  config.py  pyproject.toml  testdata.json
python_backend/cron/: reviews_cron.py
python_backend/models/: reviews_model.py
python_backend/tests/: tests.py
python_backend/utils/: rss_parser.py
